tests/ui/frontmatter/fence-close-extra-after.rs
---
---cargo
//~^ ERROR: extra characters after frontmatter close are not allowed

#![feature(frontmatter)]

fn main() {}
